tests/__snapshots__/validation-testFileMatch-wrong-option-value-type-stderr.snap.txt
Error: Value for the 'testFileMatch' option must be a list.

  1 | {
  2 |   "testFileMatch": "feature",
    |                    ~~~~~~~~~
  3 |   "failFast": true
  4 | }
  5 | 

      at ./tstyche.config.json:2:20

